Добавление функциональности бронирования, комментариев и соответствующих сущностей. Реализованы эндпоинты для создания бронирования, подтверждения, получения информации о бронированиях и комментариях. Настроены таблицы в базе данных, включая сущности Booking, Comment и User